https://lovely-marzipan-296cf8.netlify.app/

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>position과 flexbox를 연습하자2</title>
+    <script
+      src="https://kit.fontawesome.com/2c827c8cca.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
       /* css 초기화 */
       body {
@@ -19,6 +23,7 @@
       .box-containers {
         display: flex;
         flex-flow: column;
+        margin-bottom: 100px;
       }
 
       .container1 {
@@ -42,6 +47,43 @@
         background: black;
         color: white;
       }
+
+      .link-area {
+        padding: 0 200px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
+
+      .next {
+        width: 59px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 7px 15px;
+        border: 1px solid black;
+        border-radius: 5px;
+        font-size: 16px;
+        color: black;
+        text-decoration: none;
+      }
+
+      .next:hover {
+        background-color: black;
+        color: white;
+      }
+
+      i {
+        font-size: 30px;
+      }
+
+      .home {
+        color: black;
+      }
+
+      .home:hover {
+        color: gray;
+      }
     </style>
   </head>
   <body>
@@ -55,6 +97,18 @@
       <div class="box-container container3">
         <div class="box box3">div3</div>
       </div>
+    </div>
+
+    <div class="link-area">
+      <a href="https://lovely-marzipan-296cf8.netlify.app/" class="next"
+        ><i class="fa-solid fa-caret-left"></i>문제1</a
+      >
+      <a href="https://illustrious-flan-1af204.netlify.app/" class="home"
+        ><i class="fa-solid fa-house"></i
+      ></a>
+      <a href="https://cute-mooncake-06500f.netlify.app/" class="next"
+        >문제3<i class="fa-solid fa-caret-right"></i
+      ></a>
     </div>
   </body>
 </html>
